wip: add field renderer settings section

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -25,6 +25,7 @@ import lexicalLinkEditor2 from "./assets/lexical-link-editor-2.png";
 import lexicalEditorToolbar from "./assets/lexical-editor-toolbar.png";
 import conditionalValidation from "./assets/conditional-validation.gif";
 import hideMenuItems from "./assets/hide-menu-items.png";
+import fieldRendererSettings from "./assets/field-renderer-settings.png";
 
 <GithubRelease version={"5.40.0"} />
 
@@ -139,6 +140,12 @@ expect(output).toEqual({
 ```
 
 This tool is very useful in situations when you need to, for example, extract specific values from an entry, send them to an external API for processing, and then inject the processed values back to their original position in the source entry, asynchronously (via webhooks, for example).
+
+### Field Renderer Settings
+
+Field renderer plugins now support renderer settings. This means you can now implement a configurable field renderer, define its settings, and then configure your renderer on per-field basis. It looks like this:
+
+<Image src={fieldRendererSettings} title={"Field Renderer Settings"} />
 
 ### Decoratable Hooks and Components
 
