feat: add Customize Navigation article

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -339,35 +339,7 @@ The following image shows Webiny Admin navigation without the following menu ite
 
 <Image src={hideMenuItems} title="Hide Menu Items" />
 
-The code to achieve this is as simple as this:
-
-```diff-tsx
-import React from "react";
-+ import { Admin, AddMenu } from "@webiny/app-serverless-cms";
-import { Cognito } from "@webiny/app-admin-users-cognito";
-import "./App.scss";
-
-+ const HideMenuItems = AddMenu.createDecorator(Original => {
-+     const skip = ["github", "documentation", "slack", "version"];
-+
-+     return function AddMenu(props) {
-+         if (skip.includes(props.name)) {
-+             return null;
-+         }
-+
-+         return <Original {...props} />;
-+     };
-+ });
-
-export const App = () => {
-    return (
-        <Admin>
-            <Cognito />
-+            <HideMenuItems />
-        </Admin>
-    );
-};
-```
+To learn more, read the [Customize Navigation](/docs/admin-area/extending/customize-navigation) article.
 
 ### New Form Package ([#4122](https://github.com/webiny/webiny-js/pull/4122))
 
