feat: add Content Entry Traverser article

--- a/docs/developer-docs/5.40.x/headless-cms/extending/content-models-via-code.mdx
+++ b/docs/developer-docs/5.40.x/headless-cms/extending/content-models-via-code.mdx
@@ -5,13 +5,14 @@ description: Learn how to define content models and content model groups through
 ---
 
 import { Alert } from "@/components/Alert";
+import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
 import securityPermissions from "./assets/security-permissions.png";
 
-<Alert type="success" title="What you'll learn">
+<WhatYouWillLearn>
 
 - how to define content models and content model groups via plugins
 
-</Alert>
+</WhatYouWillLearn>
 
 ## Overview
 
@@ -40,7 +41,12 @@ In the following sections, we cover a couple of examples that show how to define
   type={"api"}
   name={"models"}
   dependencies={"@webiny/api-headless-cms"}
-  scaffoldCommandExtraInfo={<>Since we'll be using a couple of utilities from the <code>@webiny/api-headless-cms</code> package, we've immediately included it in the list of dependencies.</>}
+  scaffoldCommandExtraInfo={
+    <>
+      Since we'll be using a couple of utilities from the <code>@webiny/api-headless-cms</code>{" "}
+      package, we've immediately included it in the list of dependencies.
+    </>
+  }
 />
 
 ## Basic Example
@@ -129,14 +135,14 @@ Note that some of the properties that we need to define for each field are simpl
 
 <Alert type="info">
 
-  All available [field types (`type`)](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/api-headless-cms/src/graphqlFields), [field renderers (`renderer.name`)](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/app-headless-cms/src/admin/plugins/fieldRenderers), and [field validators (`validators.name`)](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/api-headless-cms/src/validators) can be found in our GitHub repository.
+All available [field types (`type`)](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/api-headless-cms/src/graphqlFields), [field renderers (`renderer.name`)](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/app-headless-cms/src/admin/plugins/fieldRenderers), and [field validators (`validators.name`)](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/api-headless-cms/src/validators) can be found in our GitHub repository.
 
 </Alert>
 
 <Alert type="success">
 
-  Want to learn how to create your own custom field type? Check out the [Create a Custom Field Type](/docs/{version}/headless-cms/extending/custom-field-type)
-  how-to guide.
+Want to learn how to create your own custom field type? Check out the [Create a Custom Field Type](/docs/{version}/headless-cms/extending/custom-field-type)
+how-to guide.
 
 </Alert>
 
