--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -107,39 +107,9 @@ WEBINY_RECORD_LOCK_TIMEOUT=3600
 
 Content entry traverser allows you to traverse any given content entry using the underlying content model AST, which is generated from the content model definition. The tool will automatically pair every key being visited with its field definition, generate its dotted path within the entry, and give you its value, so you can apply your logic to every available key/value pair.
 
-```ts Traverse a Content Entry
-// Get traverser instance.
-const traverser = await context.cms.getEntryTraverser("article");
-
-// Create a container for your custom output.
-const output: Record<string, any> = {};
-
-// We will skip values of the following field types.
-const skipFieldTypes = ["object", "dynamicZone"];
-
-// Traverse an entry, and create a flat object with value path as object key.
-traverser.traverse(entry, ({ field, value, path }) => {
-  /**
-   * Most of the time you won't care about complex fields like "object" and "dynamicZone", but only their child fields. The traverser will still go into the child fields, but this way you can conditionally apply your logic.
-   */
-  if (skipFieldTypes.includes(field.type)) {
-    return;
-  }
-
-  output[path] = value;
-});
-
-expect(output).toEqual({
-  title: "Article #1",
-  categories: [{ modelId: "category", entryId: "12345678" }],
-  "content.0.title": "Hero #1",
-  "content.1.settings.title": "Title",
-  "content.1.settings.seo.0.title": "title-0",
-  "content.1.settings.seo.1.title": "title-1"
-});
-```
-
 This tool is very useful in situations when you need to, for example, extract specific values from an entry, send them to an external API for processing, and then inject the processed values back to their original position in the source entry, asynchronously (via webhooks, for example).
+
+To learn how to use it, visit the [Content Entry Traverser](/docs/headless-cms/extending/content-entry-traverser) article.
 
 ### Field Renderer Settings
 
