fix: remove a redundant backtick

--- a/docs/developer-docs/5.40.x/headless-cms/extending/content-entry-traverser.mdx
+++ b/docs/developer-docs/5.40.x/headless-cms/extending/content-entry-traverser.mdx
@@ -45,7 +45,7 @@ createContextPlugin(context => {
 
     // Traverse the content entry.
     traverser.traverse(entry, ({ field, value, path }) => {
-      if (!includeFieldTypes.includes(field.type)) {`
+      if (!includeFieldTypes.includes(field.type)) {
         return;
       }
 
