feat: create Extensions article

--- a/docs/developer-docs/5.40.x/core-development-concepts/basics/extensions.mdx
+++ b/docs/developer-docs/5.40.x/core-development-concepts/basics/extensions.mdx
@@ -1,18 +1,47 @@
 ---
-id: f3291c9c
+id: 761e90f6
 title: Extensions
-description: Learn XYZ.
+description: Learn what extensions are and how they can be used to extend Webiny's functionality.
 ---
 
-import { Alert } from "@/components/Alert";
+import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
+import webinyScaffoldCommand from "./assets/webiny-scaffold-command.png";
 
-<Alert type="success" title="WHAT YOU’LL LEARN">
+<WhatYouWillLearn>
 
-- how Webiny is built using plugins
-- what is a `PluginsContainer`
-- how plugins work in the context of a React application
-- how plugins work in the context of a GraphQL API
+  - what extensions are and how they can be used to extend Webiny's functionality.
+
+</WhatYouWillLearn>
+
+## Overview
+
+One of the most powerful features of Webiny is the ability to extend the default functionality. This is done by creating and registering **extensions**. Extensions are a way to add new functionality to the system, or to modify the existing one.
+
+There are a couple of types of extensions in Webiny, but the most common ones are:
+
+- **Admin** - used to extend the Webiny's Admin app
+- **API** - used to extend Webiny's backend API
+- **Cloud Infrastructure** - used to extend the cloud infrastructure Webiny deploys
+
+For example, via an Admin extension, we can change the [layout of the dashboard](/docs/admin-area/extending/custom-dashboard) or [change the logo](/docs/admin-area/extending/change-logo) that's shown in the header and the main menu. On the other hand, via an API extension, we can introduce new GraphQL queries or mutations, [content models](/docs/headless-cms/extending/content-models-via-code), or [hook into lifecycle events](/docs/headless-cms/references/lifecycle-events).
+
+## Getting Started
+
+In general, the easiest way to start working on a new extension is by using the **New Extension** scaffold, which can be accessed via the `webiny scaffold` command:
+
+```bash
+yarn webiny scaffold
+```
+
+Once run and the **New Extension** scaffold is selected, users are prompted to provide the basic information about the extension, like extension type and name.
+
+<Image src={webinyScaffoldCommand} alt="Webiny Scaffold Command" />
+
+Ultimately, the scaffold creates the base code for the extension in the `extensions` folder, which is the place where most of the extension development happens.
+
+<Alert type="info">
+
+   There are a couple of cases where the extension code is placed outside of the `extensions` folder. For example, when [modifying cloud infrastructure](/docs/infrastructure/basics/modify-cloud-infrastructure), the code is placed in different `webiny.application.ts` files, located in the `apps` folder.
 
 </Alert>
 
-## Introduction
