--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -149,6 +149,22 @@ Recently, this logic started causing problems and became a blocker for implement
 
 For detailed explanation of what's happening in the process of blocks and variable interpolation, read [this PR](https://github.com/webiny/webiny-js/pull/3977).
 
+### `theme` Folder Changes ([#4135](https://github.com/webiny/webiny-js/pull/4135)) ([#4138](https://github.com/webiny/webiny-js/pull/4138))
+
+With this release, we've made a couple of changes to the `theme` folder, that was previously located in the `apps` folder.
+
+For starters, the `theme` folder has been moved from the `apps` folder to the new `extensions` folder. This change was made to better reflect the purpose of the folder, which is to store all custom extensions.
+
+The actual theme code is now also located in the `src` folder, which is the standard location for all extension-related code. This change was made to ensure that all custom extensions are stored in a consistent location, making it easier to manage and maintain them.
+
+Finally, the base `reset.css`-related styles have been removed from the default theme because they're now being handled internally. This change was made to ensure that the default theme is as clean and lightweight as possible, while still providing all the necessary functionality.
+
+<Alert type={"info"}>
+
+  For existing projects, the `theme` folder will be automatically moved to the new `extensions` folder during the project upgrade process. This change will not affect any existing customizations, and everything should work as expected.
+
+</Alert>  
+
 ## Development
 
 ### Introducing Extensions ([#4111](https://github.com/webiny/webiny-js/pull/4111))
