feat: create 5.40.0 release notes

--- a/docs/developer-docs/5.40.x/core-development-concepts/basics/extensions.mdx
+++ b/docs/developer-docs/5.40.x/core-development-concepts/basics/extensions.mdx
@@ -20,7 +20,7 @@ One of the most powerful features of Webiny is the ability to extend the default
 There are a couple of types of extensions in Webiny, but the most common ones are:
 
 - **Admin** - used to extend the Webiny's Admin app
-- **API** - used to extend Webiny's backend API
+- **API** - used to extend Webiny's backend functionality (for example its GraphQL API)
 - **Cloud Infrastructure** - used to extend the cloud infrastructure Webiny deploys
 
 For example, via an Admin extension, we can change the [layout of the dashboard](/docs/admin-area/extending/custom-dashboard) or [change the logo](/docs/admin-area/extending/change-logo) that's shown in the header and the main menu. On the other hand, via an API extension, we can introduce new GraphQL queries or mutations, [content models](/docs/headless-cms/extending/content-models-via-code), or [hook into lifecycle events](/docs/headless-cms/references/lifecycle-events).
@@ -37,7 +37,7 @@ Once run and the **New Extension** scaffold is selected, users are prompted to p
 
 <Image src={webinyScaffoldCommand} alt="Webiny Scaffold Command" />
 
-Ultimately, the scaffold creates the base code for the extension in the `extensions` folder, which is the place where most of the extension development happens.
+Ultimately, the scaffold creates the base code for the new extension in the `extensions` folder, which is the place where all extensions are stored.
 
 <Alert type="info">
 
