--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -53,6 +53,10 @@ If you find any Webiny related issues, please report them on our [Slack channel]
 
 </Alert>
 
+### Pulumi v6  ([#4096](https://github.com/webiny/webiny-js/pull/4096))
+
+As mentioned in the [Introducing Pulumi v6](#introducing-pulumi-v6-4096) section below, we've upgraded Pulumi to version 6. Although no breaking changes are expected, we've still compiled a list of all of the things you can expect upon doing your first redeployment after the upgrade [here](/docs/release-notes/5.40.0/pulumi-v6).
+
 ## Headless CMS
 
 ### Introducing Trash Bin ([#3976](https://github.com/webiny/webiny-js/pull/3976), [#4059](https://github.com/webiny/webiny-js/pull/4059))
@@ -297,9 +301,7 @@ The [`webiny info`](/docs/core-development-concepts/basics/webiny-cli#yarn-webin
 
 In order to keep up with the latest features and improvements, we've upgraded Pulumi to version 6.
 
-Note that no breaking changes are expected, but if you encounter any issues, please report them on our [Slack community channel](https://www.webiny.com/slack) or [GitHub repository](https://github.com/webiny/webiny-js/issues).
-
-For more information on this one, please refer to the separate [Pulumi v6](/docs/release-notes/5.40.0/pulumi-v6) article.
+Although no breaking changes are expected, we've still compiled a list of all of the things you can expect upon doing your first redeployment after the upgrade [here](/docs/release-notes/5.40.0/pulumi-v6).
 
 ### Preventing Production Deployments with Locally Stored State Files ([#4119](https://github.com/webiny/webiny-js/pull/4119))
 
