--- a/docs/release-notes/5.40.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.40.0/upgrade-guide.mdx
@@ -58,6 +58,10 @@ We've also upgraded some of the Admin app components and plugins, namely `Form`,
 
 Before deploying, please refer to their respective sections in the [Removed APIs](/docs/release-notes/5.40.0/removed-apis) article, and make sure to update your project code, if necessary.
 
+#### 3.3 Pulumi v6
+
+With this release, we've upgraded the Pulumi version to v6. 
+
 ### 4. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
