docs: fixed a typo

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -149,7 +149,7 @@ Previously, the functionality was available exclusively within the page details 
 
 Until this release, every time you loaded a page in the Page Editor, its content elements would get their `id` attribute regenerated. This had to do with using predefined (saved) blocks from the Block Editor.
 
-Recently, this logic started causing problems and became a blocker for implementing some interesting features. With this release, we've fixed the logic of handling element IDs across all PB editors, and element IDs are not reliable and "stable". You can now confidently reference page elements by their IDs, and know that they won't change, until you delete them.
+Recently, this logic started causing problems and became a blocker for implementing some interesting features. With this release, we've fixed the logic of handling element IDs across all PB editors, and element IDs are now reliable and "stable". You can now confidently reference page elements by their IDs, and know that they won't change, until you delete them.
 
 For detailed explanation of what's happening in the process of blocks and variable interpolation, read [this PR](https://github.com/webiny/webiny-js/pull/3977).
 
