docs: fixed the broken link for customize file actions doc

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -219,7 +219,7 @@ In terms of backward compatibility, note that all the existing customizations wi
 
 #### Documentation
 
-Note that some of the existing documentation has already been updated to reflect these changes, for example [Customize File Preview](/docs/file-manager/extending/customize-file-preview) or [Customize File Actions](/docs/file-manager/extending/customize-file-actions]) articles. But, there are still articles that we will be updating in the upcoming weeks (users will still be able to follow them in the meantime).
+Note that some of the existing documentation has already been updated to reflect these changes, for example [Customize File Preview](/docs/file-manager/extending/customize-file-preview) or [Customize File Actions](/docs/file-manager/extending/customize-file-actions) articles. But, there are still articles that we will be updating in the upcoming weeks (users will still be able to follow them in the meantime).
 
 In any case, if you encounter any issues, please report them on our [Slack community channel](https://www.webiny.com/slack).
 
