docs: fixed the incorrect extension name, which was causing an error during the application build because we import 'Extension as nameOfExtension' in 'admin/src/Extensions' when the extension is created via the extension scaffold

--- a/docs/developer-docs/5.40.x/file-manager/extending/customize-file-preview.mdx
+++ b/docs/developer-docs/5.40.x/file-manager/extending/customize-file-preview.mdx
@@ -54,7 +54,7 @@ const VideoQtFileType = () => {
   );
 };
 
-export const createExtension = () => {
+export const Extension = () => {
   return (
     <>
       <FileManagerViewConfig>
